--- a/style.css
+++ b/style.css
@@ -20,23 +20,8 @@
 
 /* Page setup */
 @page {
-    margin: 0.2cm 0.4cm;
+    margin: 0.1cm 0.4cm;
     size: A4;
-}
-
-@media screen {
-    body {
-        margin: 1cm auto;
-        padding: 0 1cm;
-        max-width: 21cm;
-    }
-}
-
-@media print {
-    body {
-        margin: 0;
-        padding: 0;
-    }
 }
 
 body {
@@ -46,6 +31,16 @@ body {
     text-align: justify;
     color: var(--text-primary);
     position: relative;
+    margin: 0;
+    padding: 0;
+}
+
+@media screen {
+    body {
+        margin: 1cm auto;
+        padding: 0 1cm;
+        max-width: 21cm;
+    }
 }
 
 /* My photo :) */
@@ -58,11 +53,17 @@ body {
     border: 3px solid var(--accent-color);
 }
 
-/* Two-column layout for main content */
-.two-column {
+/* Colum layout for cards container */
+.cards-container {
     column-count: 2;
     column-gap: 0.4cm;
-    column-rule: none; /* 1px solid #e2e8f0; */
+}
+
+@media screen {
+    .cards-container {
+        column-count: 1; /* Use one column on HTML */
+        column-gap: 0;
+    }
 }
 
 /* Prevent elements from breaking across columns */
