Update GitHub pages

--- a/style.css
+++ b/style.css
@@ -53,24 +53,6 @@ body {
     border: 3px solid var(--accent-color);
 }
 
-/* Colum layout for cards container */
-.cards-container {
-    column-count: 2;
-    column-gap: 0.4cm;
-}
-
-@media screen {
-    .cards-container {
-        column-count: 1; /* Use one column on HTML */
-        column-gap: 0;
-    }
-}
-
-/* Prevent elements from breaking across columns */
-.card {
-    break-inside: avoid;
-}
-
 /* Name */
 .name, .easter-egg-message {
     font-size: 26pt;
@@ -89,7 +71,7 @@ body {
     display: none;
 }
 
-#easter-egg-checkbox:checked ~ .easter-egg-message,
+/* #easter-egg-checkbox:checked ~ .easter-egg-message,
 #easter-egg-checkbox:hover ~ .easter-egg-message {
     display: block;
 }
@@ -97,7 +79,7 @@ body {
 #easter-egg-checkbox:checked ~ .name,
 #easter-egg-checkbox:hover ~ .name {
     display: none;
-}
+} */
 
 /* Contact info container */
 .contact-info {
@@ -125,6 +107,19 @@ body {
     margin: 0;
 }
 
+/* Colum layout for cards container */
+.cards-container {
+    column-count: 2;
+    column-gap: 0.4cm;
+}
+
+@media screen {
+    .cards-container {
+        column-count: 1; /* Use one column on HTML */
+        column-gap: 0;
+    }
+}
+
 /* Section headers (Experience, Education, etc.) */
 h2 {
     font-size: 14pt;
@@ -145,6 +140,7 @@ h2 {
     padding: 0.9em 1.2em;
     border-radius: 8px;
     margin-bottom: 0.7em;
+    break-inside: avoid; /* Prevent cards from breaking across columns */
 }
 
 /* Card title */
